testing/tests/ui/blocks_below_top_level.stderr
error: extends blocks are not allowed below top level
 --> MyTemplate1.txt:3:2
       " extends \"bla.txt\" %}\n{% endblock %}\n"
 --> tests/ui/blocks_below_top_level.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: macro blocks are not allowed below top level
 --> MyTemplate2.txt:3:2
       " macro bla() %}\n{% endmacro %}\n{% endblo"...
  --> tests/ui/blocks_below_top_level.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: import blocks are not allowed below top level
 --> MyTemplate3.txt:3:2
       " import \"bla.txt\" as blue %}\n{% endblock"...
  --> tests/ui/blocks_below_top_level.rs:20:10
   |
20 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
